--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@
   </head>
   <body>
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ page.title | default: site.title | default: Ms. Hackman's If/else if/else Notes & Problems }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: Read the notes. Embeded in the notes are examples to try. <br>  After you've completed this, return to google classroom to do this week's assignment. }}</h2>
+      <h1 class="project-name">{{ page.title | default: site.title }}</h1>
+      <h2 class="project-tagline">{{ page.description | default: site.description }}</h2>
       <!-- {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %} -->
